# aims-io

./: index.html  mkdocs.yml  pyproject.toml
.github/workflows/: basic-code-quality.yaml  publish-to-pypi.yaml
aims_io/: __init__.py  aims_io.py  utils.py
docs/: example.md
examples/: fake.py
